# consumeEBPGLogs

./: README.md  setup.cfg
consumeEBPGLogs/: consumeLogs.py
consumeEBPGLogs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
