[metadata]
name = consumeEBPGLogs
version = 0.0.1
author = Christian Olsen
author_email = christian@cjsolsen.com
description = Tool to comsume EBPG logs
long_description = file: README.md, LICENSE
license = MIT

[options]
packages = consumeEBPGLogs
python_requires = >=3.8
install_requires =
    argparse
    matplotlib
    numpy

[options.entry_points]
console_scripts =
    consumeEBPGLogs = consumeEBPGLogs.consumeLogs:main